package com.tourism.iam.entity;

public enum Role {
    CUSTOMER,
    ADMIN,
    TOUR_OWNER
}
