package com.tourism.iam.entity;

import jakarta.persistence.*;
import jakarta.validation.constraints.*;
import lombok.*;

import java.math.BigDecimal;
import java.time.LocalDate;
import java.time.LocalDateTime;

@Entity
@Table(name = "users")
@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class User extends BaseEntity {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Integer userID;

    @NotBlank @Size(max = 100)
    private String fullName;

    @Pattern(regexp = "^\\d{10,11}$")
    private String phone;

    @NotBlank @Email
    @Column(unique = true)
    private String email;

    @Enumerated(EnumType.STRING)
    private Role role;

    // Phân biệt user đăng nhập qua phương thức nào
    @Enumerated(EnumType.STRING)
    @Column(name = "auth_provider", nullable = false, length = 20)
    @Builder.Default
    private AuthProvider authProvider = AuthProvider.LOCAL;

    @Column(name = "provider_id")
    private String providerId; // sub claim từ Google (user ID bên Google)

    private String password;

    private String avatar;
    private Boolean status = true;

    @Past
    private LocalDate dateOfBirth;

    @Column(name = "coin_balance")
    @Min(0)
    private BigDecimal coinBalance = BigDecimal.ZERO;

    @Column(name = "province_code", length = 10)
    private String provinceCode;

    @Column(name = "province_name", length = 100)
    private String provinceName;

    @Column(name = "district_code", length = 10)
    private String districtCode;

    @Column(name = "district_name", length = 100)
    private String districtName;

    @Column(name = "is_email_verified", nullable = false)
    private Boolean isEmailVerified = false;

    @Column(name = "verification_token")
    private String verificationToken;

    @Column(name = "verification_token_expiry")
    private LocalDateTime verificationTokenExpiry;

    // OTP-based email verification (6 digits)
    @Column(name = "otp_code", length = 6)
    private String otpCode;

    @Column(name = "otp_expiry")
    private LocalDateTime otpExpiry;

    @Column(name = "otp_last_sent_at")
    private LocalDateTime otpLastSentAt;

    private LocalDateTime lastActiveAt;

    @Column(name = "keycloak_id")
    private String keycloakId; // ID của user trong keycloak (UUID dang String)

    /*
        // Flag masked user is already created in Keycloak 
        // false = user old(only have in iam_db, already sync Keycloak)
        // true = It's already in both iam_db and Keycloak.
    */
    @Column(name = "migrated_to_keycloak")
    private Boolean migratedToKeycloak = false; 
}
