package com.tourism.tourcatalog.entity;

import jakarta.persistence.*;
import lombok.*;

import java.time.LocalDateTime;

@Entity
@Table(name = "departure_transports")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class DepartureTransport extends BaseEntity {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Integer transportID;

    @Enumerated(EnumType.STRING)
    @Column(name = "type")
    private TransportType transportType;
    
    @Enumerated(EnumType.STRING)
    private VehicleType vehicleType;

    @Column(name = "vehicle_name")
    private String vehicleName;

    @Column(name = "start_point")
    private String startPoint;

    @Column(name = "end_point")
    private String endPoint;

    @Column(name = "depart_time")
    private LocalDateTime departTime;

    @Column(name = "arrival_time")
    private LocalDateTime arrivalTime;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "departure_id")
    private TourDeparture tourDeparture;
}
